<resources >
    <string name="app_name">Siddharth Library</string>
    <string name="App_Title">Siddharth Library</string>
    <string name="usernameTitle">Username</string>
    <string name="usernameHint">Enter the Username</string>
    <string name="passwordTitle">Password</string>
    <string name="passwordHint">Enter the Password</string>
    <string name="loginButton">Login</string>
    <string name="forgot_passwordButton">FORGOT PASSWORD</string>
    <string name="confirm_passwordHint">Confirm Password</string>
    <string name="emailTitle">Email</string>
    <string name="emailHint">Enter The Email</string>
    <string name="phoneHint">phone</string>
    <string name="roll_noHint">Roll No.</string>
    <string name="signupBtn">SIGNUP</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="linkToLoginBtn">Already Registered,Click Here To Login</string>
    <string name="linkToSignUpText">Click Here To Signup</string>
    <string name="getUsernameHint">Username</string>
    <string name="college_logo">College Logo</string>
    <string name="reset_my_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="clickToLogin">Click To Login</string>
    <string name="helloworld">HelloWorld</string>
    <string name="logout">Logout</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="college">College</string>
    <string name="sietk">SIETK</string>
    <string name="sistk">SISTK</string>
    <string name="hello_admin">Hello Admin</string>
    <string name="account">Account</string>
    <string name="library">Library</string>
    <string name="my_books">My Books</string>
    <string name="settings">Settings</string>
    <string name="profileimage">profileImage</string>
    <string name="account_gmail_com">account@gmail.com</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="welcome_to_library_app">Welcome to Library</string>
    <string name="users">Users</string>
    <string name="userimageicon">userImageIcon</string>
    <string name="userupdatename">userUpdateName</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="search">Search</string>
    <string name="view_all_books">View All Books</string>
    <string name="feedback_about_book">Feedback About Book</string>
    <string name="recommend_new_book">Recommend New Book</string>
    <string name="view_books_requested">View Books Requested</string>
    <string name="view_books_recieved">View Books Received</string>
    <string name="total_fine_amount">Total Fine Amount</string>
    <string name="all_books_return_date">All Books Return Date</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="from_siddharth_library">From Siddharth Library</string>
    <string name="remaining_books">Remaining Books</string>
    <string name="book_request_from_users">Book Request From Users</string>
    <string name="view_all_users">View All Users</string>
    <string name="books_recieved_users">Books Received Users</string>
    <string name="delete_user_accounts">Delete User Accounts</string>
    <string name="exception_msg">Must Implement Account Dialog Listener</string>
    <string name="AccDialog">Account Dialog</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="old_email_address">Old Email Address</string>
    <string name="new_email_address">New Email Address</string>
    <string name="add_book">Add Book</string>
    <string name="abbreviation">Abbreviation:</string>
    <string name="author">Author</string>
    <string name="edition">Edition</string>
    <string name="isbn_code">ISBN Code</string>
    <string name="remove_book">Remove Book</string>
    <string name="search_book">Search Book</string>
    <string name="book_name">Book Name:</string>
    <string name="abbr">Abbr</string>
    <string name="author_1">Author:</string>
    <string name="edition_1">Edition:</string>
    <string name="isbn_code_1">ISBN Code:</string>
    <string name="send_request">Send Request</string>
    <string name="search_with_abbreviation">Search with Abbreviation</string>
    <string name="name_1">Name:</string>
    <string name="search_with_roll_no">Search with Roll No.</string>
    <string name="requested_date">Requested Date:</string>
    <string name="date">Date</string>
    <string name="username">Username:</string>
    <string name="roll_no">Roll No:</string>
    <string name="delete_request">Delete Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="receive">Receive</string>
    <string name="received_date">Received Date:</string>
    <string name="reset">reset</string>
    <string name="verify">verify</string>
    <string name="to">To:</string>
    <string name="message">Message:</string>
    <string name="subject">Subject:</string>
    <string name="devMail">mohanreddyhitman@gmail.com</string>
    <string name="copies">Copies</string>
    <string name="availability">Availability:</string>
    <string name="books_available">books available</string>
    <string name="return_date">Return Date:</string>
    <string name="book_1">Book 1</string>
    <string name="book_2">Book 2</string>
    <string name="search_here">Search here</string>
    <string name="new_book_recommendation">New Book Recommendation</string>
    <string name="reqrec_code">REQREC Code</string>
    <string name="register">REGISTER</string>
    <string name="login_background">login background</string>
    <string name="siddharth_library">Siddharth Library</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="books_requested_users">Books Requested Users</string>
    <string name="_16f61a04a3">16F61A04A3</string>
    <string name="k_mahesh_reddy">K MAHESH REDDY</string>
    <string name="_16f61a0479">16F61A0479</string>
    <string name="n_jhansi_chowdary">N JHANSI CHOWDARY</string>
    <string name="_16f61a0477">16F61A0477</string>
    <string name="v_jahnavi_reddy">V JAHNAVI REDDY</string>
    <string name="_16f61a04b3">16F61A04B3</string>
    <string name="d_mounika">D MOUNIKA</string>
    <string name="_16f61a04b0">16F61A04B0</string>
    <string name="n_mohan">N MOHAN</string>
    <string name="by_ece_students">By ECE Students</string>
    <string name="choose">Choose</string>
    <string name="book_image_name">Book Image Name</string>
    <string name="search_users">Search Users</string>

</resources>
