<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_account_admin"
            android:icon="@drawable/ic_account"
            android:title="@string/account"/>
        <item android:id="@+id/nav_library_books_admin"
            android:icon="@drawable/ic_library_books"
            android:title="@string/library"/>
        <item android:id="@+id/nav_users_admin"
            android:icon="@drawable/ic_profile"
            android:title="@string/users"/>
        <item android:id="@+id/nav_settings_admin"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>

</menu>