<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/_6sdp"
    android:id="@+id/signup_layout"
    android:elevation="@dimen/_2sdp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/_6sdp"
    android:layout_marginBottom="@dimen/_6sdp"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/_20sdp">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/_14sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/_10sdp">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/UserNameSignUpID"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/holo_blue_light"
            android:layout_marginTop="@dimen/_10sdp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignUpID"
                style="@style/modifiedEditText"
                android:hint="@string/passwordTitle"
                android:maxLines="1"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/_10sdp">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/confirmPassID"
                style="@style/modifiedEditText"
                android:hint="@string/confirm_passwordHint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/_10sdp">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneID"
                style="@style/modifiedEditText"
                android:inputType="phone"
                android:maxLines="1"
                android:hint="@string/phoneHint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/_10sdp">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailSignUpID"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/emailTitle"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/_10sdp">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/rollNoID"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/roll_number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_17sdp"
            style="@style/parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/gender"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/male_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11sdp"
                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/clg_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_17sdp"
            style="@style/parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_clg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14sdp"
                android:text="@string/college"
                android:textSize="@dimen/_12ssp" />

            <RadioButton
                android:id="@+id/sietk_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7sdp"
                android:checked="true"
                android:text="@string/sietk" />

            <RadioButton
                android:id="@+id/sistk_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sistk" />
        </RadioGroup>
        <Button
            android:id="@+id/register"
            android:layout_marginTop="10dp"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="@string/register" />

        <TextView
            android:id="@+id/linkToLoginID"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/_10sdp"/>
    </LinearLayout>
    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBarSend"
        android:layout_marginTop="@dimen/_190sdp"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.cardview.widget.CardView>
