<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to"
        style="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/emailDev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devMail"
        style="@style/TextAppearance.AppCompat.Large"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        style="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        style="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:gravity="start|top"
        />
    <Button
        android:id="@+id/sendFeedbackMailFromAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_light"/>
</LinearLayout>