<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"
            style="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/emailDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/devMail"
            style="@style/TextAppearance.AppCompat.Large"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            style="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_book_recommendation"
            style="@style/TextAppearance.AppCompat.Large"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            style="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="10"
            android:gravity="start|top"
            />
        <Button
            android:id="@+id/sendFeedbackMailFromAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/send"
            android:textStyle="bold"
            android:background="@android:color/holo_blue_light"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
