<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:id="@+id/fragment_search_books">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Search_Book_REQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_search_book"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Search_RollNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/search_with_roll_no"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Search_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/search"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/book_name"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/book_from_firestore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="133dp"
            android:layout_height="match_parent"
            android:text="@string/requested_date"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date_from_firestore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:text="@string/author_1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bookAuthor_from_firestore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/author"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:text="@string/edition_1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bookEdition_from_firestore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/edition"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username_from_firestore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:text="@string/roll_no"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userRollNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/roll_number"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_book_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/delete_request"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/progressBarDelete"
        android:layout_marginTop="16dp"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>