<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/layoutDialogUser"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_username"
        android:hint="@string/usernameTitle"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_phone"
        android:inputType="phone"
        android:hint="@string/phoneHint"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_rollno"
        android:hint="@string/roll_number"
        android:inputType="textCapSentences"/>

</RelativeLayout>