<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="20dp">

        <Button
            android:id="@+id/userNameupdate"
            style="@style/loginButton"
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/emailUpdate"
            style="@style/loginButton"
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/emailTitle"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/phoneUpdate"
            style="@style/loginButton"
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/phoneHint"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/rollNoUpdate"
            style="@style/loginButton"
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/roll_number"
            android:textColor="@android:color/black" />


    </LinearLayout>

</androidx.cardview.widget.CardView>
